--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,28 @@
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <img src="https://img.freepik.com/premium-vector/car-shop-logo-design-template_145155-2321.jpg" [routerLink]="'/home'" alt="Logo" class="logo-img" style="cursor: pointer;">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a [routerLink]="'/home'" class="nav-link" [routerLinkActive]="['active']">Home</a>
+            </li>
+            <li class="nav-item">
+                <a [routerLink]="'/contact'" class="nav-link" [routerLinkActive]="['active']">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a [routerLink]="'/about'" class="nav-link" [routerLinkActive]="['active']">About</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav" style="margin-left: auto;">
+            <li class="nav-item">
+                <a [routerLink]="'/login'" *ngIf="!loggedIn" class="nav-link" [routerLinkActive]="['active']">Login</a>
+            </li>
+            <li class="nav-item">
+                <a (click)="logOut()" style="cursor: pointer;" *ngIf="loggedIn" class="nav-link" [routerLinkActive]="['active']">Log out</a>
+            </li>
+            <!-- Add more navigation items here -->
+        </ul>
+    </div>
+</nav>
