--- a/client/src/app/pages/about-us/about-us.component.html
+++ b/client/src/app/pages/about-us/about-us.component.html
@@ -1,1 +1,10 @@
-<p>about-us works!</p>
+<div>
+    <div>
+        <p>About us?</p>
+    </div>
+    <div>
+        <p> neki random tekst</p>
+    </div>
+
+
+</div>
