--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,1 +1,47 @@
-<p>home works!</p>
+<div>
+    <div class="centar1">
+        <p>Search neki</p>
+        <div style="background-color: greenyellow;
+            height: 100px;
+            width: 500px;">
+            SEEEEEEEEEEEEEEEEEARCH
+        </div>
+    </div>
+    <!-- <button (click)="getCars(brojac)">dvojka</button> -->
+
+    <div style="display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;">
+        <p>Search neki</p>
+    </div>
+    <div class="container">
+        <div *ngIf="cars!=undefined" class="row">
+            <div class="item" *ngFor="let car of cars">
+                <div class="card">
+                    <p>{{car.Model}}</p>
+                    <p>Slika</p>
+                    <p>Jos neka deskripcija</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="centar">
+        <button>levo TODO ikonice</button>
+        <button>desno</button>
+    </div>
+
+    <div class="centar">
+        Logoi nekih 5 6 komada
+    </div>
+
+    <div class="centar">
+        Najprodavaniji nekih 5 komada ( loop around )
+    </div>
+
+    <div class="centar">
+        VESTI
+    </div>
+
+</div>
