--- a/client/src/app/pages/register/register.component.html
+++ b/client/src/app/pages/register/register.component.html
@@ -1,1 +1,6 @@
-<p>register works!</p>
+<p>Registrovanje </p>
+
+<label for="">Email</label> <input type="email" name="" [(ngModel)]="email"><br>
+<label for="">UserName</label> <input type="text" name="" [(ngModel)]="username"><br>
+<label for="">Password</label> <input type="password" name="" [(ngModel)]="password"><br>
+<button (click)="register()">Log in</button>
