--- a/client/src/app/pages/home/home.component.css
+++ b/client/src/app/pages/home/home.component.css
@@ -35,3 +35,19 @@
     justify-content: center;
     margin-top: 10px;
   }
+  .picture{
+    height: 130px;
+    width: 210px;
+    object-fit: contain;
+  }
+  ::ng-deep .p-card-body {
+    /* Your CSS styles here */
+    height: 350px;
+  }
+  ::ng-deep .p-card-title {
+    /* Your CSS styles here */
+    height: 100px;
+  }
+  ::ng-deep .p-card-footer{
+    margin-top: auto
+  }
