--- a/client/src/app/pages/home/home.component.css
+++ b/client/src/app/pages/home/home.component.css
@@ -1,7 +1,9 @@
 .card{
-    height: 300px;
-    width: 200px;
-    background-color: rgb(189, 189, 189);
+    height: 200px;
+    width: 800px;
+    background-color: rgba(237, 237, 237, 0.849);
+    border: none;
+    border-radius: 5;
 }
 .container{
     display: flex;
@@ -50,4 +52,20 @@
   }
   ::ng-deep .p-card-footer{
     margin-top: auto
+  }
+
+  .loading-spinner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+  
+  .spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-top-color: white;
+    border-radius: 50%;
+    width: 125px;
+    height: 125px;
+    animation: spin 1s linear infinite;
   }
