--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,16 +1,27 @@
 <div>
     <div class="centar1">
-        <p>Search neki</p>
-        <div style="background-color: greenyellow;
-            height: 100px;
-            width: 500px;">
-            SEEEEEEEEEEEEEEEEEARCH
+        <h1>Pretraga</h1>
+        <div class="card">
+            <label for="modelInput">Unesite naziv modela:</label>
+            <input type="text" id="modelInput" placeholder="Unesite naziv modela">
+            <label for="yearInput">Unesite godinu proizvodnje:</label>
+            <input  type="number" placeholder="Unesite godinu proizvodnje" id="yearInput" name="year" min="1900" max="2099" step="1">
+
+            
+            <h5>Cena: {{rangeValues[0] + ' - ' + rangeValues[1]}}</h5>
+            <p-slider [(ngModel)]="rangeValues"[step]="500" [min]="1000" [max]="100000" [range]="true"></p-slider>
+
+            <button class="mt-2">Pretrazi *todo intert icon*</button>
+
         </div>
     </div>
-    <div class="centar">
-        <p>Ponuda</p>
+    <div class="centar mt-2">
+        <h1>Ponuda</h1>
     </div>
-    <div class="container">
+    <div *ngIf="loading" class="loading-spinner center mt-5">
+        <div class="spinner"></div>
+      </div>
+    <div *ngIf="!loading" class="container mt-2">
         <div *ngIf="cars!=undefined" class="row">
             <div class="item" *ngFor="let car of cars">
                 <p-card (click)="navigateTo(car._id)" [style]="{'width': '250px','height':'350px', 'margin-bottom': '8px', 'cursor': 'pointer'}">
@@ -19,7 +30,7 @@
                         {{car.Model}}
                     </ng-template>
                     <ng-template pTemplate="content">
-                        <img alt="Card" class="picture" src="https://sveisvasta.hr/wp-content/uploads/2014/11/7190-jestiva-slika-pokrivka-torta-rodjendan-auto-crveni-sveisvasta.jpg">
+                        <img alt="{{car.Model}}" class="picture" src="https://sveisvasta.hr/wp-content/uploads/2014/11/7190-jestiva-slika-pokrivka-torta-rodjendan-auto-crveni-sveisvasta.jpg">
                         
                     </ng-template>
                     <ng-template pTemplate="footer" style="margin-top:auto">
@@ -33,17 +44,37 @@
     </div>
     <p-paginator [rows]="15" [totalRecords]="totalCars" (onPageChange)="changePage($event)"></p-paginator>
 
-
     <div class="centar">
-        Logoi nekih 5 6 komada
+        <h1>Komapnije sa kojim radimo</h1>
+    </div>
+    <div class="centar mt-4">
+        <button (click)="moveCompaniesLeft()">Left</button>
+        <div *ngFor="let company of companiesToDisplay">
+            <p-card [style]="{'width': '250px','height':'250px', 'margin': '8px'}">
+                <img alt="{{company.name}}" class="picture" src="{{company.imageUrl}}">
+                <p class="mt-2">{{company.description}}</p>
+            </p-card>
+        </div>
+        <button (click)="moveCompaniesRight()">Right</button>
+    </div>
+
+    <div class="centar mt-4">
+        <h1>Moli se ivan da uradi najprodavanije</h1>
+    </div>
+    <div class="centar">
+        <!-- Todo promeniti da ovo bude automobili i promeniti funkcije -->
+        <button (click)="moveCompaniesLeft()">Left</button>
+        <div *ngFor="let company of companiesToDisplay">
+            <p-card [style]="{'width': '250px','height':'250px', 'margin': '8px'}">
+                <img alt="{{company.name}}" class="picture" src="{{company.imageUrl}}">
+                <p class="mt-2">{{company.description}}</p>
+            </p-card>
+        </div>
+        <button (click)="moveCompaniesRight()">Right</button>
     </div>
 
     <div class="centar">
-        Najprodavaniji nekih 5 komada ( loop around )
-    </div>
-
-    <div class="centar">
-        VESTI
+        Random hardkodovano govno
     </div>
 
 </div>
