--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -9,6 +9,9 @@
                 <a [routerLink]="'/home'" class="nav-link" [routerLinkActive]="['active']">Home</a>
             </li>
             <li class="nav-item">
+                <a [routerLink]="'/adds'" class="nav-link" [routerLinkActive]="['active']">Car Adds</a>
+            </li>
+            <li class="nav-item">
                 <a [routerLink]="'/contact'" class="nav-link" [routerLinkActive]="['active']">Contact</a>
             </li>
             <li class="nav-item">
