--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="centar1">
-        <h1>Pretraga</h1>
+        <h1>Search</h1>
         <div class="card">
             <label for="modelInput">Unesite naziv modela:</label>
             <input type="text" id="modelInput" placeholder="Unesite naziv modela">
@@ -8,10 +8,10 @@
             <input  type="number" placeholder="Unesite godinu proizvodnje" id="yearInput" name="year" min="1900" max="2099" step="1">
 
             
-            <h5>Cena: {{rangeValues[0] + ' - ' + rangeValues[1]}}</h5>
+            <h5>Price: {{rangeValues[0] + ' - ' + rangeValues[1]}}</h5>
             <p-slider [(ngModel)]="rangeValues"[step]="500" [min]="1000" [max]="100000" [range]="true"></p-slider>
 
-            <button class="mt-2">Pretrazi *todo intert icon*</button>
+            <button class="mt-2" [routerLink]='["/adds"]'>Pretrazi *todo intert icon*</button>
 
         </div>
     </div>
@@ -42,7 +42,7 @@
         </div>
 
     </div>
-    <p-paginator [rows]="15" [totalRecords]="totalCars" (onPageChange)="changePage($event)"></p-paginator>
+    
 
     <div class="centar">
         <h1>Komapnije sa kojim radimo</h1>
