--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -20,6 +20,12 @@
         </ul>
         <ul class="navbar-nav" style="margin-left: auto;">
             <li class="nav-item">
+                <p-menu #menu [model]="items" [popup]="true"></p-menu>
+                <!-- todo dodati u ngIf is admin -->
+                <a (click)="menu.toggle($event)" *ngIf="loggedIn" class="nav-link" [routerLinkActive]="['active']"
+                style="cursor: pointer;">Admin portal</a>
+            </li>
+            <li class="nav-item">
                 <a [routerLink]="'/login'" *ngIf="!loggedIn" class="nav-link" [routerLinkActive]="['active']">Login</a>
             </li>
             <li class="nav-item">
