--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -29,6 +29,9 @@
                 <a [routerLink]="'/login'" *ngIf="!loggedIn" class="nav-link" [routerLinkActive]="['active']">Login</a>
             </li>
             <li class="nav-item">
+                <a [routerLink]="'/register'" *ngIf="!loggedIn" class="nav-link" [routerLinkActive]="['active']">Sign In</a>
+            </li>
+            <li class="nav-item">
                 <a (click)="logOut()" style="cursor: pointer;" *ngIf="loggedIn" class="nav-link" [routerLinkActive]="['active']">Log out</a>
             </li>
             <!-- Add more navigation items here -->
