--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -1,6 +1,39 @@
-<p>Logovanje </p>
-
-<label for="">Email</label> <input type="email" name="" [(ngModel)]="email"><br>
-<label for="">UserName</label> <input type="text" name="" [(ngModel)]="username"><br>
-<label for="">Password</label> <input type="password" name="" [(ngModel)]="password"><br>
-<button (click)="login()">Log in</button>
+<form (ngSubmit)="login()" [formGroup]="loginForm" class="formLogin">
+    <p-panel header="Login Example">
+        <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+            <div class="ui-grid-row">
+                <div class="ui-grid-col-2">
+                    Email:
+                </div>
+                <div class="ui-grid-col-6">
+                    <input pInputText type="text" formControlName="email" class="form-control" name="email">
+                </div>
+                <div class="ui-grid-col-4">
+                    <div [hidden]="loginForm.controls['email'].valid || !loginForm.controls['email'].dirty" class="alert alert-danger">
+                        Login is required
+                    </div>
+                </div>
+            </div>
+            <div class="ui-grid-row">
+                <div class="ui-grid-col-2">
+                    Password:
+                </div>
+                <div class="ui-grid-col-6">
+                    <input pInputText type="password" formControlName="password" class="form-control" name="password">
+                </div>
+                <div class="ui-grid-col-4">
+                    <div [hidden]="loginForm.controls['password'].valid || !loginForm.controls['password'].dirty" class="alert alert-danger">
+                        Password is required
+                    </div>
+                </div>
+            </div>
+            <div class="ui-grid-row" id="buttonLogin">
+                <div class="ui-grid-col-2"></div>
+                <div class="ui-grid-col-6">
+                    <button  pButton type="submit" label="Submit" [disabled]="!loginForm.valid"></button>
+                </div>
+                <div class="ui-grid-col-4"></div>
+            </div>
+        </div>
+    </p-panel>
+</form>
