bug fixes and add of users portal

--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
                 <a [routerLink]="'/home'" class="nav-link" [routerLinkActive]="['active']">Home</a>
             </li>
             <li class="nav-item">
-                <a [routerLink]="'/adds'" class="nav-link" [routerLinkActive]="['active']">Car Adds</a>
+                <a [routerLink]="'/ads'" class="nav-link" [routerLinkActive]="['active']">Car Ads</a>
             </li>
             <li class="nav-item">
                 <a [routerLink]="'/contact'" class="nav-link" [routerLinkActive]="['active']">Contact</a>
