--- a/client/src/app/pages/edit-car/edit-car.component.html
+++ b/client/src/app/pages/edit-car/edit-car.component.html
@@ -1,4 +1,10 @@
-<p>{{car.Model}}</p>
-<h1>TODO URADITI PODATKE U INPUTOVIMA POPUNJENI</h1>
+<div *ngIf="loading" class="loading-spinner center mt-5">
+    <div class="spinner"></div>
+  </div>
+<div *ngIf="!loading">
+    <p>{{car.Model}}</p>
+    <h1>TODO URADITI PODATKE U INPUTOVIMA POPUNJENI</h1>
+    
+    <p-button (click)="editCar()" styleClass="p-button-success" label="Confirm" ></p-button>
+</div>
 
-<p-button (click)="editCar()" styleClass="p-button-success" label="Confirm" ></p-button>
