--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -13,7 +13,7 @@
             <h5>Price: {{rangeValues[0] + ' - ' + rangeValues[1]}}</h5>
             <p-slider [(ngModel)]="rangeValues"[step]="500" [min]="1000" [max]="100000" [range]="true"></p-slider>
 
-            <button class="mt-2" [routerLink]='["/adds"]'>Pretrazi *todo intert icon*</button>
+            <button class="mt-2" [routerLink]='["/ads"]'>Pretrazi *todo intert icon*</button>
 
         </div>
     </div>
