--- a/client/src/app/pages/cars-adds/cars-adds.component.html
+++ b/client/src/app/pages/cars-adds/cars-adds.component.html
@@ -13,28 +13,34 @@
             <h5>Price: {{rangeValues[0] + ' - ' + rangeValues[1]}}</h5>
             <p-slider [(ngModel)]="rangeValues"[step]="500" [min]="1000" [max]="100000" [range]="true"></p-slider>
 
-            <button class="mt-2" [routerLink]='["/adds"]'>Pretrazi *todo intert icon*</button>
+            <button class="mt-2" [routerLink]='["/ads"]'>Pretrazi *todo intert icon*</button>
 
         </div>
     </div>
     <!-- <p-paginator [rows]="15" [totalRecords]="totalCars" (onPageChange)="changePage($event)"></p-paginator> -->
 <div *ngIf="loading" class="loading-spinner center mt-5">
     <div class="spinner"></div>
-  </div>
-<div *ngIf="!loading" class="container mt-2">
+</div>
+
+<div *ngIf="!loading" class="container mt-4">
     <div *ngIf="cars!=undefined" class="row">
-        <div class="item" *ngFor="let car of cars">
-            <p-card (click)="navigateTo(car._id)" [style]="{'width': '250px','height':'350px', 'margin-bottom': '8px', 'cursor': 'pointer'}">
+        <div *ngFor="let car of cars">
+            <p-card (click)="navigateTo(car._id)" class="cardd">
                 <!-- Todo staviti max velicinu title -->
                 <ng-template pTemplate="title"> 
                     {{car.Model}}
                 </ng-template>
-                <ng-template pTemplate="content">
-                    <img alt="{{car.Model}}" class="picture" src="{{car.imageUrl}}">
-                    
-                </ng-template>
-                <ng-template pTemplate="footer" style="margin-top:auto">
-                    <p><b>Price:</b> {{car.Price}} <b>Year:</b> {{car.Year}} </p>
+                <ng-template pTemplate="content" class="content">
+                    <img alt="{{car.Model}}" class="picture me-5" src="{{car.imageUrl}}">
+                    <div class="right-side-content">
+                        <p><b>Make </b>{{car.Make}}</p>
+                        <p><b>Price</b> {{car.Price}}</p>
+                        <p><b>Year </b>{{car.Year}}</p>
+                        <p><b>Jos neki podatak TODO IVAN</b> {{car.Year}}</p>
+                        <p><b>Jos neki podatak TODO IVAN</b> {{car.Year}}</p>
+                        <p><b>Jos neki podatak TODO IVAN</b> {{car.Year}}</p>
+                    </div>
+                
                 </ng-template>
             </p-card>
         </div>
