--- a/client/src/app/pages/users-portal/users-portal.component.html
+++ b/client/src/app/pages/users-portal/users-portal.component.html
@@ -1,1 +1,27 @@
-<p>users-portal works!</p>
+<div class="center mt-5">
+    <p-table [value]="users" [loading]="loading">
+        <ng-template pTemplate="caption">
+            <div class="caption">
+                <h1>All users</h1>
+                <p-button label="Add sser" styleClass="p-button-secondary" [routerLink]="'/add-user'"></p-button>
+            </div>
+        </ng-template>
+        <ng-template pTemplate="header">
+            <tr>
+                <th>Email</th>
+                <th>Userame</th>
+                <th>Options</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-user>
+            <tr>
+                <td>{{ user.email }}</td>
+                <td>{{ user.username }}</td>
+                <td>
+                    <p-button pRipple class="me-2" styleClass="p-button-secondary" label="Edit" (click)="navigateToEdit(user._id)"></p-button>
+                    <p-button  pRipple styleClass="p-button-danger" label="Delete" (click)="deleteUser(user._id)"></p-button>
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
