--- a/client/src/app/pages/cars-adds/cars-adds.component.css
+++ b/client/src/app/pages/cars-adds/cars-adds.component.css
@@ -45,7 +45,7 @@
   .right-side-content{
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
   }
   .cardd{
     width: 750px;
