--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -22,7 +22,7 @@
             <li class="nav-item">
                 <p-menu #menu [model]="items" [popup]="true"></p-menu>
                 <!-- todo dodati u ngIf is admin -->
-                <a (click)="menu.toggle($event)" *ngIf="loggedIn" class="nav-link" [routerLinkActive]="['active']"
+                <a (click)="menu.toggle($event)" *ngIf="loggedIn && checkIfAdmin()" class="nav-link" [routerLinkActive]="['active']"
                 style="cursor: pointer;">Admin portal</a>
             </li>
             <li class="nav-item">
