--- a/client/src/app/pages/contact/contact.component.html
+++ b/client/src/app/pages/contact/contact.component.html
@@ -1,3 +1,39 @@
-<div>
-    <h1>Kontakt</h1>
+<div id="container">
+
+    <div id="heder">  
+        <img src="https://avancen.com/imgs/contactus.jpg" alt="">
+    </div>
+    <div id="menu1">
+        <div id="menu"> 
+            <p class="p1">Želimo da čujemo tvoje pitanje, sugestiju ili predlog kako da budemo još bolji.</p>
+            <p class="p1">Piši nam, a mi ćemo se potruditi da što potpunije i u što kraćem roku odgovorimo na tvoj zahtev. </p> 
+        </div>
+
+       
+        <div id="forma">
+            <p>E-mail adresa</p>
+            <input type="email" ><br><br>
+            <p>Tema</p>
+            <select name="" id="">
+                <option selected>Izaberi Temu</option>
+    
+                <option selected>Oglas</option>
+                <option selected>Nalog</option>
+                <option selected>Placanje</option>
+                <option selected>Informisanje</option>
+                <option selected>Primedba/Predlog</option>
+                <option selected>Ostalo</option>
+            </select><br><br>
+            <p>Opis</p>
+            <textarea name="" id="" cols="40" rows="6"></textarea><br><br>
+            <button>Posalji</button>
+
+        </div>
+        <div id="images1">
+            <img src="http://www.marshalsecurity.ca/wp-content/uploads/2014/02/contactus.jpg">
+        </div>
+       
+    </div>
+   
+   
 </div>
