--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div>
+<div >
     <div class="centar1">
         <h1>Search</h1>
         <div class="card">
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="centar mt-2">
-        <h1>Ponuda</h1>
+        <h1>New Cars</h1>
     </div>
     <div *ngIf="loading" class="loading-spinner center mt-5">
         <div class="spinner"></div>
@@ -61,7 +61,7 @@
     
 
     <div class="centar">
-        <h1>Komapnije sa kojim radimo</h1>
+        <h1>Companies we work With</h1>
     </div>
     <div class="centar mt-4">
         <button (click)="moveCompaniesLeft()">Left</button>
