--- a/client/src/app/pages/contact/contact.component.css
+++ b/client/src/app/pages/contact/contact.component.css
@@ -8,7 +8,7 @@
 }
 #heder{
     width: 100%;
-    height:300px ;
+    height:400px ;
 }
 #heder img{
     width: 100%;
@@ -45,12 +45,14 @@
 #forma input{
     width: 300px;
     height: 30px;
-    border: 4px solid black; 
+    border: 3px solid black; 
   font-size: 16px;
 }
 
 #forma input:focus{
-   border-color:orange;
+  
+   border: 4px solid  #3B82F6;
+
 }
 
 #forma select{
@@ -61,20 +63,20 @@
   font-size: 16px;
 }
 #forma select:focus{
-    border-color:orange;
+    border: 4px solid  #3B82F6;
  }
 
  textarea{
     border: 5px solid black; 
 }
 textarea:focus{
-    border-color: orange;
+    border: 4px solid  #3B82F6;
 }
 #forma button{
 
     position: relative;
     left: 100px;
-    background-color:orange;
+    border: 4px solid  #3B82F6;
     border-radius: 10px;
     width: 100px;
     height: 50px;
