--- a/client/src/app/pages/contact/contact.component.html
+++ b/client/src/app/pages/contact/contact.component.html
@@ -5,28 +5,28 @@
     </div>
     <div id="menu1">
         <div id="menu"> 
-            <p class="p1">Želimo da čujemo tvoje pitanje, sugestiju ili predlog kako da budemo još bolji.</p>
-            <p class="p1">Piši nam, a mi ćemo se potruditi da što potpunije i u što kraćem roku odgovorimo na tvoj zahtev. </p> 
+            <p class="p1">We want to hear your question, suggestion or proposal on how to be even better.</p>
+            <p class="p1">Write to us, and we will do our best to respond to your request as fully and as quickly as possible. </p> 
         </div>
 
        
         <div id="forma">
-            <p>E-mail adresa</p>
+            <p>E-mail adress</p>
             <input type="email" ><br><br>
-            <p>Tema</p>
+            <p>Theme</p>
             <select name="" id="">
-                <option selected>Izaberi Temu</option>
+                <option selected>Pick out</option>
     
-                <option selected>Oglas</option>
-                <option selected>Nalog</option>
-                <option selected>Placanje</option>
-                <option selected>Informisanje</option>
-                <option selected>Primedba/Predlog</option>
-                <option selected>Ostalo</option>
+                <option selected>Advertisement</option>
+                <option selected>Account</option>
+                <option selected>Payment</option>
+                <option selected>Information</option>
+                <option selected>Remark/Suggestion</option>
+                <option selected>Other</option>
             </select><br><br>
-            <p>Opis</p>
+            <p>Description</p>
             <textarea name="" id="" cols="40" rows="6"></textarea><br><br>
-            <button>Posalji</button>
+            <p-button class="mt-3" label="Search" ></p-button>
 
         </div>
         <div id="images1">
