--- a/client/src/app/pages/contact/contact.component.html
+++ b/client/src/app/pages/contact/contact.component.html
@@ -11,9 +11,9 @@
 
        
         <div id="forma">
-            <p>E-mail adress</p>
+            <p>E-mail adress:</p>
             <input type="email" ><br><br>
-            <p>Theme</p>
+            <p>Topic</p>
             <select name="" id="">
                 <option selected>Pick out</option>
     
