--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -28,17 +28,16 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by 
-       <a href="#">Scanfcode</a>.
+          <p class="copyright-text">Copyright &copy; 2023 All Rights Reserved by Ivan Miljkovic
           </p>
         </div>
 
         <div class="col-md-4 col-sm-6 col-xs-12">
           <ul class="social-icons">
-            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-            <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
+            <li><a class="facebook" href="#"><i class="pi pi-facebook"></i></a></li> 
+            <li><a class="twitter" href="#"><i class="pi pi-twitter"></i></a></li>
+            <li><a class="dribbble" href="#"><i class="pi pi-instagram"></i></a></li>
+            <li><a class="linkedin" href="#"><i class="pi pi-linkedin"></i></a></li>
           </ul>
         </div>
       </div>
