--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -64,21 +64,37 @@
         <h1>Companies we work With</h1>
     </div>
     <div class="centar mt-4">
-        <button (click)="moveCompaniesLeft()">Left</button>
+        <button (click)="moveCompaniesLeft()" style="background: none;
+        border: none;
+        padding: 0;
+        cursor: pointer;">
+        <i class="pi pi-arrow-circle-left" style="color: #3B82F6; font-size: 4rem;"></i>
+        </button>
+
         <div *ngFor="let company of companiesToDisplay">
             <p-card [style]="{'width': '250px','height':'250px', 'margin': '8px'}">
                 <img alt="{{company.name}}" class="picture" src="{{company.imageUrl}}">
                 <p class="mt-2">{{company.description}}</p>
             </p-card>
         </div>
-        <button (click)="moveCompaniesRight()">Right</button>
+        <button (click)="moveCompaniesRight()" style="background: none;
+        border: none;
+        padding: 0;
+        cursor: pointer;">
+        <i class="pi pi-arrow-circle-right" style="color: #3B82F6; font-size: 4rem;"></i>
+        </button>
     </div>
 
     <div class="centar mt-4">
-        <h1>Moli se ivan da uradi najprodavanije</h1>
+        <h1>Best Buy Cars</h1>
     </div>
     <div class="centar">
-        <button (click)="moveBestBuyLeft()">Left</button>
+        <button (click)="moveBestBuyLeft()" style="background: none;
+        border: none;
+        padding: 0;
+        cursor: pointer;">
+        <i class="pi pi-arrow-circle-left" style="color: #3B82F6; font-size: 4rem;"></i>
+        </button>
         <div *ngFor="let car of bestBuyToDisplay">
             <p-card (click)="navigateTo(car._id)" [style]="{'width': '300px','height':'350px','margin-left':'10px','margin-right':'10px' ,'margin-bottom': '8px', 'cursor': 'pointer'}">
                 <ng-template pTemplate="title"> 
@@ -98,11 +114,16 @@
                 </ng-template>
             </p-card>
         </div>
-        <button (click)="moveBestBuyRight()">Right</button>
+        <button (click)="moveBestBuyRight()" style="background: none;
+        border: none;
+        padding: 0;
+        cursor: pointer;">
+        <i class="pi pi-arrow-circle-right" style="color: #3B82F6; font-size: 4rem;"></i>
+        </button>
     </div>
 
     <div class="centar">
-       <h1>Vesti hardokdovati</h1>
+       <h1>Daily News</h1>
     </div>
 
 </div>
