--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
-<form (ngSubmit)="login()" [formGroup]="loginForm" class="formLogin">
-    <p-panel header="Login Example">
+<form (ngSubmit)="login()" [formGroup]="loginForm" class="formLogin"  style="margin-bottom: 94px;">
+    <p-panel header="Login">
         <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
             <div class="ui-grid-row">
                 <div class="ui-grid-col-2">
