--- a/client/src/app/pages/register/register.component.html
+++ b/client/src/app/pages/register/register.component.html
@@ -1,5 +1,5 @@
-<form (ngSubmit)="register()" [formGroup]="registerForm" class="formRegister">
-    <p-panel header="Sign In Example">
+<form (ngSubmit)="register()" [formGroup]="registerForm" class="formRegister" style="margin-bottom: 20px;">
+    <p-panel header="Sign In">
         <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
             <div class="ui-grid-row">
                 <div class="ui-grid-col-2">
