--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -3,14 +3,20 @@
       <div class="row">
         <div class="col-sm-12 col-md-6">
           <h6>About</h6>
-          <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p>
+          <p class="text-justify">CarShop is the most visited domestic website for buying and selling cars, other vehicles, and spare parts.
+
+            The website polovniautomobili.com allows for advertising vehicles and spare parts, efficiently connects buyers and sellers, and provides advice and information regarding vehicle buying and selling.</p>
         </div>
 
         <div class="col-xs-6 col-md-3">
-          <h6>Categories</h6>
+          <h6>Brands</h6>
           <ul class="footer-links">
-            <li><a href="http://scanfcode.com/category/c-language/%22%3EC"></a></li>
-            <li><a href="http://scanfcode.com/category/front-end-development/%22%3EUI"> Design</a></li>
+            <li><a href="https://www.audi.rs/" target="_blank">Audi</a></li>
+            <li><a href="https://www.bmw.rs/sr/index.html"target="_blank"> BMW</a></li>
+            <li><a href="https://www.toyota.rs/"target="_blank"> Toyota</a></li>
+            <li><a href="https://www.opel.rs/"target="_blank"> Opel</a></li>
+            <li><a href="https://www.mazda.rs/home"target="_blank"> Mazda</a></li>
+            <li><a href="https://www.mercedes-benz.rs/?group=all&subgroup=see-all&view=BODYTYPE"target="_blank"> Mercedes-Benz</a></li>
 
           </ul>
         </div>
@@ -18,7 +24,9 @@
         <div class="col-xs-6 col-md-3">
           <h6>Quick Links</h6>
           <ul class="footer-links">
-            <li><a href="http://scanfcode.com/about/%22%3EAbout Us"></a></li>
+            <li><a href="http://localhost:4200/home">Home</a></li>
+            <li><a href="http://localhost:4200/ads">Ads</a></li>
+            <li><a href="http://localhost:4200/contact">Contact</a></li>
 
           </ul>
         </div>
@@ -28,16 +36,16 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-sm-6 col-xs-12">
-          <p class="copyright-text">Copyright &copy; 2023 All Rights Reserved by Ivan Miljkovic
+          <p class="copyright-text">Copyright &copy; 2023 All Rights Reserved by Ivan Miljkovic.
           </p>
         </div>
 
         <div class="col-md-4 col-sm-6 col-xs-12">
           <ul class="social-icons">
-            <li><a class="facebook" href="#"><i class="pi pi-facebook"></i></a></li> 
-            <li><a class="twitter" href="#"><i class="pi pi-twitter"></i></a></li>
-            <li><a class="dribbble" href="#"><i class="pi pi-instagram"></i></a></li>
-            <li><a class="linkedin" href="#"><i class="pi pi-linkedin"></i></a></li>
+            <li><a class="facebook" href="https://www.facebook.com/groups/988381171505906" target="_blank"><i class="pi pi-facebook"></i></a></li> 
+            <li><a class="twitter" href="https://twitter.com/imi_pmf_kg" target="_blank"><i class="pi pi-twitter"></i></a></li>
+            <li><a class="dribbble" href="https://www.instagram.com/pmf.kg/" target="_blank"><i class="pi pi-instagram"></i></a></li>
+            <li><a class="linkedin" href="https://www.linkedin.com/school/institut-za-matematiku-i-informatiku-pmf-kragujevac/?originalSubdomain=rs" target="_blank"><i class="pi pi-linkedin"></i></a></li>
           </ul>
         </div>
       </div>
