--- a/client/src/app/pages/contact/contact.component.html
+++ b/client/src/app/pages/contact/contact.component.html
@@ -15,7 +15,6 @@
                 <p>Topic</p>
                 <select name="" id="">
                     <option selected>Pick out</option>
-        
                     <option selected>Advertisement</option>
                     <option selected>Account</option>
                     <option selected>Payment</option>
@@ -25,7 +24,7 @@
                 </select><br><br>
                 <p>Description</p>
                 <textarea name="" id="" cols="40" rows="6"></textarea><br><br>
-                <p-button class="mt-3" label="Search" ></p-button>
+                <p-button class="mt-3" label="Send" ></p-button>
 
             </div>
         </div>
